infrastructure/ingress-config.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  labels:
    app: cluster-gateway
  annotations: 
    kubernetes.io/ingress.class: contour 
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cluster-gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-api-lb
                port:
                  number: 80
